correct outer nav heigton mobile

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -153,7 +153,7 @@ section:first-of-type {
 .btn-small {
   width: 80px;
   height: 32px;
-  border-radius: 2px;
+  border-radius: 4px;
   text-align: center;
   font-weight: 500;
 }
